# api-leakproof

./: .gitignore  README.md  pyproject.toml
app/: add_key_dialog.py  alert_panel.py  dashboard.py  key_manager.py  main.py  main_window.py  styles.py
config/: settings.py
db/: database.py  models.py
monitor/: alerter.py  anomaly_detector.py  scheduler.py  usage_fetcher.py
proxy/: platform_rules.py  recorder.py  server.py
shared/: types.py
